--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -16,9 +16,9 @@
                 <div>
                     <nav class="nav nav-masthead justify-content-center float-md-end">
                         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/">홈</a> &nbsp; &nbsp;
-                        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/save">회원가입</a> &nbsp;&nbsp;
-                        <a class="nav-link fw-bold py-1 px-0" href="/login">로그인</a>&nbsp;&nbsp;
-                        <a class="nav-link fw-bold py-1 px-0" href="/paging">글목록</a>&nbsp;&nbsp;
+                        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/member/save">회원가입</a> &nbsp;&nbsp;
+                        <a class="nav-link fw-bold py-1 px-0" href="/member/login">로그인</a>&nbsp;&nbsp;
+                        <a class="nav-link fw-bold py-1 px-0" href="/board/paging">글목록</a>&nbsp;&nbsp;
                     </nav>
                 </div>
 
