글쓰기 처리

--- a/src/main/resources/templates/memberPages/login.html
+++ b/src/main/resources/templates/memberPages/login.html
@@ -80,7 +80,7 @@
 <main class="form-signin w-100 m-auto">
     <form action="/member/login" method="post">
         <img src="https://www.w3schools.com/howto/img_avatar.png" alt="" width="150" height="150">
-        <h1 class="h3 mb-3 fw-normal">please login</h1>
+        <h1 class="h3 mb-3 fw-normal">로그인을 해주세요</h1>
 
         <div class="form-floating">
             <input type="text" class="form-control" name="memberEmail">
@@ -93,7 +93,7 @@
         </div>
 
 
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
     </form>
 </main>
