--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -18,7 +18,8 @@
                         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/">홈</a> &nbsp; &nbsp;
                         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/member/save">회원가입</a> &nbsp;&nbsp;
                         <a class="nav-link fw-bold py-1 px-0" href="/member/login">로그인</a>&nbsp;&nbsp;
-                        <a class="nav-link fw-bold py-1 px-0" href="/board/paging">글목록</a>&nbsp;&nbsp;
+                        <a class="nav-link fw-bold py-1 px-0" href="/board/paging">글목록</a>&nbsp;
+                        <a class="nav-link fw-bold py-1 px-0" href="/board/save">글쓰기</a>
                     </nav>
                 </div>
 
