--- a/src/main/resources/templates/boardPages/detail.html
+++ b/src/main/resources/templates/boardPages/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -28,9 +28,20 @@
         <td th:text="*{#temporals.format(board.boardCreatedDate,'yyyy-MM-dd HH:mm:ss')}"></td>
         <td th:text="${board.boardHits}"></td>
         <td><img th:src="@{|/upload/${board.boardFileName}|}" width="100" height="100" alt=""></td>
+        <div th:if="${session.loginEmail}==${board.boardWriter}">
+            <td><button class="btn btn-danger" onclick="deleteById()"  >삭제</button></td>
+
+        </div>
 
     </tr>
     </tbody>
 </table>
 </body>
+    <script th:inline="javascript">
+        const deleteById = () => {
+            const id = [[${board.id}]];
+            location.href="/board/delete/"+id;
+
+        }
+    </script>
 </html>
