--- a/src/main/resources/templates/boardPages/detail.html
+++ b/src/main/resources/templates/boardPages/detail.html
@@ -10,14 +10,16 @@
 </head>
 <body>
 <th:block th:replace="commonPages/header :: header"></th:block>
-<table class="table table-hover">
+<h2>상세 정보</h2>
+<table>
     <thead>
     <tr>
-        <th scope="col">글번호</th>
-        <th scope="col">작성자</th>
-        <th scope="col">제목</th>
-        <th scope="col">작성시간</th>
-        <th scope="col">조회수</th>
+        <th>글번호</th>
+        <th>작성자</th>
+        <th>제목</th>
+        <th>내용</th>
+        <th>작성시간</th>
+        <th>조회수</th>
     </tr>
     </thead>
     <tbody>
@@ -25,14 +27,14 @@
         <td th:text="${board.id}"></td>
         <td th:text="${board.boardWriter}"></td>
         <td th:text="${board.boardTitle}"></a></td>
+        <td th:text="${board.boardContents}"></a></td>
         <td th:text="*{#temporals.format(board.boardCreatedDate,'yyyy-MM-dd HH:mm:ss')}"></td>
         <td th:text="${board.boardHits}"></td>
         <td><img th:src="@{|/upload/${board.boardFileName}|}" width="100" height="100" alt=""></td>
         <div th:if="${session.loginEmail}==${board.boardWriter}">
-            <td><button class="btn btn-danger" onclick="deleteById()"  >삭제</button></td>
-
+            <td><button class="btn btn-danger" onclick="deleteById()">삭제</button></td>
+            <td><button class="btn btn-primary" onclick="updateById()">수정</button></td>
         </div>
-
     </tr>
     </tbody>
 </table>
@@ -41,6 +43,11 @@
         const deleteById = () => {
             const id = [[${board.id}]];
             location.href="/board/delete/"+id;
+
+        }
+        const updateById = () => {
+            const id = [[${board.id}]];
+            location.href="/board/update/"+id;
 
         }
     </script>
