--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -21,8 +21,14 @@
                         <a class="nav-link fw-bold py-1 px-0" href="/board/paging">글목록</a>&nbsp;
 
                         <div th:if="${session.loginEmail}">
-                            <a class="nav-link fw-bold py-1 px-0" href="/board/save">글쓰기</a>&nbsp;
+                           <a class="nav-link fw-bold py-1 px-0 "  href="/member/logout">로그아웃</a>&nbsp;
+                            <a class="nav-link fw-bold py-1 px-0" href="/board/save">글쓰기</a>
+                            <div th:if="${session.loginEmail.toString().equals('admin')}">
+                                <a class="nav-link fw-bold py-1 px-0 "  href="/member/admin">관리자사이트</a>&nbsp;
+
+                            </div>
                         </div>
+
                     </nav>
 
                 </div>
