--- a/src/main/resources/templates/memberPages/detail.html
+++ b/src/main/resources/templates/memberPages/detail.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 </head>
 <body>
-    <h2>회원 정보</h2>
+        <h2>나의정보 조회</h2>
     <table>
         <tr>
             <td>회원번호</td>
-            <td>회원이메일</td>
-            <td>회원비밀번호</td>
-            <td>회원이름</td>
-            <td>회원전화번호</td>
-            <td>회원프로필</td>
+            <td>이메일</td>
+            <td>비밀번호</td>
+            <td>이름</td>
+            <td>전화번호</td>
+            <td>프로필</td>
         </tr>
-        <tr th:each="member:${memberList}">
+        <tr>
             <td th:text="${member.id}"></td>
             <td th:text="${member.memberEmail}"></td>
             <td th:text="${member.memberPassword}"></td>
             <td th:text="${member.memberName}"></td>
             <td th:text="${member.memberMobile}"></td>
-            <td><img th:src= "@{|/upload/${member.memberProfile}|}" width="100" height="100" alt=""></td>
-            <td><a th:href="@{|/member/delete/${member.id}|}">삭제</a></td>
+            <td><img th:src="@{|/upload/${member.memberProfile}|}" width="100" height="100" alt=""></td>
 
         </tr>
     </table>
+    <a href="/">돌아가기</a>
 </body>
 </html>
