--- a/src/main/resources/templates/boardPages/paging.html
+++ b/src/main/resources/templates/boardPages/paging.html
@@ -11,6 +11,12 @@
 <th:block th:replace="commonPages/header :: header"></th:block>
 <table class="table table-hover">
     <thead>
+    <div class="container mt-3">
+        <form action="/board/search" method="get">
+            <input type="text" name="q1" placeholder="제목을 입력하세요">
+            <input type="submit" value="검색">
+        </form>
+    </div>
     <tr>
         <th scope="col">글번호</th>
         <th scope="col">작성자</th>
@@ -65,5 +71,6 @@
     </ul>
 </div>
 </table>
+
 </body>
 </html>
