--- a/src/main/resources/templates/memberPages/login.html
+++ b/src/main/resources/templates/memberPages/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <th:block th:replace="commonPages/header :: header"></th:block>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
     <meta charset="utf-8">
