--- a/src/main/resources/templates/memberPages/update.html
+++ b/src/main/resources/templates/memberPages/update.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <th:block th:replace="commonPages/header :: header"></th:block>
     <meta charset="UTF-8">
     <title>Title</title>
     <h2> update.html</h2>
