--- a/src/main/resources/templates/memberPages/myPage.html
+++ b/src/main/resources/templates/memberPages/myPage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <th:block th:replace="commonPages/header :: header"></th:block>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
     <a href="/member/update">내정보수정하기</a>
+    <a href="/">돌아가기</a>
 </body>
 </html>
