--- a/src/main/resources/templates/boardPages/search.html
+++ b/src/main/resources/templates/boardPages/search.html
@@ -7,7 +7,7 @@
     <title>Title</title>
 </head>
 
-<h2>paging</h2>
+<h2>search</h2>
 <th:block th:replace="commonPages/header :: header"></th:block>
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
@@ -40,4 +40,6 @@
     </div>
 
 </table>
+
+
 </html>
