--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <th:block th:replace="commonPages/header :: header"></th:block>
 </head>
 <body>
@@ -19,6 +20,7 @@
 
 
   <a href="board/photoZone">사진관</a>
+  <a href="member/404">404코드 확인하기</a>
 
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
   <div class="col-md-4 d-flex align-items-center">
@@ -29,4 +31,8 @@
   </div>
 </footer>
 </body>
+
+
+
+
 </html>
