--- a/src/main/resources/templates/memberPages/detail.html
+++ b/src/main/resources/templates/memberPages/detail.html
@@ -26,6 +26,7 @@
 
         </tr>
     </table>
+        <td><a  th:href="@{|/member/myDelete/${member.id}|}">내정보 삭제하기</a></td>
     <a href="/">돌아가기</a>
 </body>
 </html>
