채팅방을 만들어 보았다

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,11 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="">
+
+
+  <style>
+    .frame {
+      display: inline-block;
+
+      padding: 8px;
+
+      border-radius: 8px;
+      background-color: #000000;
+    }
+
+    .clock {
+      color: #ffffff;
+      font-family: 'Roboto', sans-serif;
+      text-align: center;
+      box-sizing: border-box;
+    }
+
+    .large_text {
+      font-size: 75px;
+    }
+
+    .small_text {
+      font-size: 20px;
+    }
+
+    .date_box {
+      font-size: 15px;
+    }
+
+    @keyframes blink {
+      50% {
+        opacity: 0.0;
+      }
+    }
+
+    .colon {
+      font-size: 55px;
+      vertical-align: text-bottom;
+      animation: blink 1s step-start 0s infinite;
+    }
+  </style>
+
+
   <title>Title</title>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <th:block th:replace="commonPages/header :: header"></th:block>
 </head>
 <body>
+
+
+
+
+
+
 <style>
   footer {
     position: fixed;
@@ -19,8 +74,35 @@
 
 
 
-  <a href="board/photoZone">사진관</a>
-  <a href="member/404">404코드 확인하기</a>
+  <a class="btn btn-primary"  href="board/photoZone">사진관</a>
+<a class="btn btn-primary"  href="/chat">채팅방</a>
+
+  <a class="btn btn-warning" href="member/404">404코드 확인하기</a><br /><br /><br />
+
+
+<div class="frame">
+  <div class="clock">
+    <div class="time_box">
+      <span id="hours" class="large_text"></span>
+      <span class="colon">:</span>
+      <span id="minute" class="large_text"></span>
+      <span id="seconds" class="small_text"></span>
+    </div>
+    <div class="date_box">
+      <span id="year"></span>
+      <span>.</span>
+      <span id="month"></span>
+      <span>.</span>
+      <span id="date"></span>
+      <span id="day"></span>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
   <div class="col-md-4 d-flex align-items-center">
@@ -31,6 +113,62 @@
   </div>
 </footer>
 </body>
+<script>
+  const watchClock = () => {
+    function leftPad(number) {
+      if (number < 10) {
+        return `0${number}`;
+      }
+
+      return `${number}`;
+    };
+
+    function setText(selector, text) {
+      const targetElement = document.querySelector(selector);
+
+      if (!targetElement) {
+        return;
+      }
+
+      targetElement.innerText = text;
+    };
+
+    function getDayText(index) {
+      const days = ['일요일', '월요일', '화요일', '수요일', '목요일', '금요일', '토요일'];
+      return days[index];
+    };
+
+    const present = new Date();
+
+
+    const hour = leftPad(present.getHours());
+    const minute = leftPad(present.getMinutes());
+    const seconds = leftPad(present.getSeconds());
+
+    setText('#hours', hour);
+    setText('#minute', minute);
+    setText('#seconds', seconds);
+
+    const year = present.getFullYear();
+    const month = leftPad(present.getMonth() + 1);
+    const date = leftPad(present.getDate());
+    const day = getDayText(present.getDay());
+
+    setText('#year', year);
+    setText('#month', month);
+    setText('#date', date);
+    setText('#day', day);
+  };
+
+  watchClock();
+
+  const clockInterval = setInterval(watchClock, 1000);
+
+
+
+
+
+</script>
 
 
 
